Fix buttons not showing up in compact posters

--- a/compact-poster.css
+++ b/compact-poster.css
@@ -25,3 +25,6 @@
   border-radius: 10px !important;
   overflow: hidden;
 }
+.cardOverlayButton-br {
+  bottom: 3.5em;
+}
